--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 logging.level.org.springframework=debug
-spring.profiles.active=dev # ?? ???? ???? ??? ? ??.
+spring.profiles.active=dev
+
 currency-service.url=http://default.in28minutes.com
 currency-service.userName=defaultUserName
 currency-service.key=devKey
